// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label respects the "outline" prop 1`] = `
.c0 {
  display: inline-block;
  font-weight: 600;
  color: #fff;
  border-radius: 100px;
  font-size: 12px;
  line-height: 20px;
  padding: 0 8px;
  background-color: #6a737d;
  margin-top: -1px;
  margin-bottom: -1px;
  color: #586069;
  border: 1px solid rgba(27,31,35,0.15);
  box-shadow: none;
  background-color: #6a737d;
  background-color: transparent;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  className="c0"
/>
`;

exports[`Label respects the "variant" prop 1`] = `
.c0 {
  display: inline-block;
  font-weight: 600;
  color: #fff;
  border-radius: 100px;
  font-size: 14px;
  line-height: 16px;
  padding: 8px 12px;
  background-color: #6a737d;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  className="c0"
/>
`;
